# cricketmatchwinnerpredictor

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/prompts/: Requirements.md
artifacts/models/: match_model.joblib.prev
data/: injury_report.json  squad_profiles.json  venue_profiles.json
docs/: cricket-predictor-knowledge-graph.md
scripts/: _test_features.py  fetch_squads.py  fetch_venues.py  normalize_bbb_csv.py  refresh_ipl_csv.sh  train_models.py
src/cricket_predictor/: __init__.py
src/cricket_predictor/api/: __init__.py  app.py  schemas.py
src/cricket_predictor/config/: settings.py
src/cricket_predictor/data/: __init__.py  cricsheet_loader.py  dataset_generator.py  predictions_db.py
src/cricket_predictor/features/: match_features.py  player_features.py  venue_encoder.py
src/cricket_predictor/models/: training.py
src/cricket_predictor/providers/: __init__.py  base.py  cricinfo_standings.py  cricmetric_venue.py  gemini_provider.py  http_provider.py  injury_report_provider.py  ipl_csv_provider.py  ipl_schedule.py  ipl_squad_provider.py  iplt20_stats_provider.py  match_history_provider.py  mock_provider.py  registry.py
src/cricket_predictor/services/: data_update_service.py  ipl_csv_refresh_service.py  live_refresh_service.py  match_context_service.py  override_parser.py  prediction_service.py  prediction_tracker.py  standings_service.py
tests/: conftest.py  test.txt  test_api.py  test_feedback_learning.py  test_ipl_csv_provider.py  test_ipl_csv_refresh_service.py
(+4 files in other folders)
